# tvision-delphi

./: .gitignore  LICENSE  README.en.md  README.md  build_all.bat
delphi/examples/AvsColor/: AvsColor.dpr
delphi/examples/MMenuDemo/: MMenuDemo.dpr
delphi/examples/TVisionDemo/: TVisionDemo.dpr
delphi/examples/TvAppDemo/: TvAppDemo.dpr
delphi/examples/TvDirDemo/: TvDirDemo.dpr
delphi/examples/TvEditDemo/: TvEditDemo.dpr
delphi/examples/TvFormsDemo/: TvFormsDemo.dpr
delphi/examples/TvHc/: TvHc.dpr
delphi/examples/TvPaletteDemo/: TvPaletteDemo.dpr
delphi/screenshot/: capture.ps1
delphi/source/: TVision.pas
wrapper/: CMakeLists.txt
wrapper/include/: tvision_c.h
wrapper/src/: tvision_c.cpp
